<resources>
    <string name="app_name">TechWiz</string>
    <string name="start">Start</string>
    <string name="techwizquizapp">TechWiz Quiz</string>
    <string name="todo">TODO</string>
    <string name="asj_quiz">TechWiz Quiz</string>
    <string name="question_no">Question no :</string>
    <string name="points">Points</string>
    <string name="congratulations">Congratulations!</string>
    <string name="submit">Next</string>
    <string name="radiobutton">RadioButton</string>
    <string name="question">Question</string>
    <string name="back_to_home">Back To Home</string>
    <string name="you_scored">You Scored</string>
    <string name="_50_50">50/50</string>
    <string name="developed_by_techwiz">Developed by TechWiz</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="developed_by">Developed by</string>
</resources>